# uorm

./: Cargo.toml  publish.sh
src/: driver_manager.rs  error.rs  lib.rs  main.rs  mapper_loader.rs  pool_manager.rs  transaction.rs  uorm-1.0-mapper.dtd
src/executor/: mapper.rs  mod.rs  session.rs
src/models/: db_config.rs  db_type.rs  mod.rs
src/rdbc/: connection.rs  deserializer.rs  mod.rs  pool.rs  serializer.rs  value.rs
src/rdbc_mysql/: connection.rs  mod.rs  pool.rs  value_codec.rs
src/tpl/: ast.rs  cache.rs  engine.rs  mod.rs  parser.rs  render.rs  render_context.rs
src/udbc/: connection.rs  deserializer.rs  driver.rs  mod.rs  serializer.rs  value.rs
src/udbc_mysql/: connection.rs  mod.rs  pool.rs  value_codec.rs
tests/: macro_mapper_assets_test.rs  multi_db_test.rs
tests/resources/mapper/: multi_db.xml  test.xml
uorm-macros/: Cargo.toml
uorm-macros/src/: assets.rs  lib.rs
