[package]
name = "uorm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
walkdir = "2.5.0"
dashmap = "7.0.0-rc2"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
thiserror = "2.0.17"
async-trait = "0.1.89"
mysql_async = { version = "0.36.1", features = ["chrono", "rust_decimal"], optional = true }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }


[features]
default = ["mysql"]
mysql = ["dep:mysql_async"]

[workspace]
members = [
    ".",
    "uorm-macros",
]
