[package]
name = "uorm"
version = "0.1.1"
edition = "2024"
description = "Rust 下的轻量级 ORM 框架，借鉴了 Java MyBatis 的设计理念，强调 SQL 与业务逻辑分离。它结合 Rust 的类型系统与宏机制，支持编写原生 SQL 并自动映射结果，兼容 async/await，兼顾性能与可控性。"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.38.4", features = ["serialize"] }
dashmap = "7.0.0-rc2"
chrono = { version = "0.4.42", features = ["serde"] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
thiserror = "2.0.17"
async-trait = "0.1.89"
mysql_async = { version = "0.36.1", features = ["chrono", "rust_decimal"], optional = true }
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0.100"
log = "0.4.29"
uorm-macros = { version = "0.1.0", path = "uorm-macros" }
ctor = "0.6.3"
glob = "0.3.3"


[features]
default = ["mysql"]
mysql = ["dep:mysql_async"]

[workspace]
members = [
    ".",
    "uorm-macros",
]
